# AndroidOpenCVCamera

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: Bloom3dEngineNdk-release.aar
app/src/androidTest/java/com/bloomengineeringltd/androidopencvcamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImagePipe.h  cam_utils.cpp  cam_utils.h  camera_engine.cpp  camera_engine.h  common.hpp  native-lib.cpp
app/src/main/cpp/algo/: TripleBuffer.h
app/src/main/cpp/util/: perfmeter.h
app/src/main/java/com/bloomengineeringltd/androidopencvcamera/: CameraActivity.java  CameraActivity.kt  GLES3JNILib.kt  GLES3JNIView.kt  MyGLSurfaceView.java  MyGLSurfaceView.kt
app/src/main/res/layout/: activity.xml
app/src/test/java/com/bloomengineeringltd/androidopencvcamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
